fix: enhance input styling by removing default appearance and adjusting text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -162,20 +162,26 @@ body {
 
 .input-group input,
 .input-group select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  
   width: 100%;
   height: 50px;
   font-size: 18px;
   font-weight: bold;
 
   text-align: center;
-
-  appearance: none;
+  text-align-last: center;
 
   padding: 10px;
   margin-top: 10px;
 
   border: 1px solid #ccc;
   border-radius: 6px;
+
+  color: #000;
+  background-color: #fff;
 }
 
 .input-group input:focus,
